# izi22

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bubblesort.cpp  bubblesort.h  cmake_install.cmake  main.cpp  mainb.cpp  prog  progb  sort.cpp  sort.h  tests.cpp  tests2.cpp  thread.cpp  thread.h  threadfb.cpp  threadfb.h
