cmake_minimum_required(VERSION 3.8)
project(libmodel3d)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++0x -Wall -ggdb3")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -pthread")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
set(LIB_SOURCE_FILES thread.cpp sort.cpp)
add_library(lib_sort SHARED ${LIB_SOURCE_FILES})

add_executable(prog main.cpp)
target_link_libraries(prog bubblesort_lib)
target_link_libraries(prog lib_sort)

set (LIB_SOURCE_FILES threadfb.cpp bubblesort.cpp sort.cpp)
add_library(bubblesort_lib STATIC ${LIB_SOURCE_FILES})
add_executable(progb mainb.cpp)
target_link_libraries(progb bubblesort_lib)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
message(${GTEST_LIBRARIES})
add_executable(tests tests.cpp)
target_link_libraries(tests ${GTEST_LIBRARIES} -lpthread)
target_link_libraries(tests lib_sort)
target_link_libraries(tests bubblesort_lib)
add_executable(tests2 tests2.cpp)
target_link_libraries(tests2 ${GTEST_LIBRARIES} -lpthread)
target_link_libraries(tests2 lib_sort)
target_link_libraries(tests2 bubblesort_lib)